# Snapchef-backend

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  railway.json
app/: config.py  deps.py  main.py  schemas.py
app/routers/: produce.py  receipts.py  recipes.py
app/services/: baidu.py  classifier.py  cleaner.py  recipes.py  textract.py  translator.py  vision.py
docs/: API.md
tests/: conftest.py  test_classifier.py  test_cleaner.py  test_endpoint.py  test_produce.py  test_recipes.py  test_textract_parse.py
tests/fixtures/: textract_sample.json
